# Major-Project

major-project/: .gitignore  README.md  debug_grammar.py  test_api.sh  test_grammar.py  test_grammar2.py  test_grammar_simple.py
major-project/ProjectBackend1/: .gitignore  README.md  requirements.txt  test_api_locally.py  test_db_pdf.py  test_xhtml2pdf.py
major-project/ProjectBackend1/app/: dependencies.py  main.py  mongo.py  schemas.py
major-project/ProjectBackend1/mongodb-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-7590680116931121394.wt  collection-10-7590680116931121394.wt  collection-12-7590680116931121394.wt  collection-2-7590680116931121394.wt  collection-4-7590680116931121394.wt  collection-7-7590680116931121394.wt  index-1-7590680116931121394.wt  sizeStorer.wt  (+7 more)
major-project/frontend/: app.js  index.html  style.css
major-project/srspipeline-main/: .gitignore  README.md  main.py  pyproject.toml  test_gemini.py
major-project/srspipeline-main/src/: __init__.py
major-project/srspipeline-main/src/api/: __init__.py  models.py  routes.py
major-project/srspipeline-main/src/generator/: __init__.py  srs_generator.py
major-project/srspipeline-main/src/pipeline/: __init__.py  srs_pipeline.py
major-project/srspipeline-main/src/templates/: __init__.py  agile_template.py  base_template.py  ieee_template.py  minimal_template.py  startup_template.py  template_registry.py
major-project/srspipeline-main/src/validator/: __init__.py  srs_validator.py
major-project/whisper-main/: Dockerfile  app.py  debug_whisper.py  index.html
(+17 files in other folders)
